[package]
name = "nyarkup-wasm"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.1"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
