[package]
name = "nyarkup-wasm"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.1"
serde = { version = "1.0.217", features = [ "derive" ] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.77", features = [ "console" ] }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
